--- a/src/components/body/Body.css
+++ b/src/components/body/Body.css
@@ -2,7 +2,7 @@ h2 {
     font-size: 1.5rem;
 }
 #showcase{
-    background: url(../images/showcase.jpg) no-repeat center center;
+    background: #d5eaeb;
     margin-bottom: 30px;
     border-bottom: 1px solid #73c9e6;
     margin-bottom: 30px;
