--- a/src/components/businesses/BusinessForm.css
+++ b/src/components/businesses/BusinessForm.css
@@ -19,7 +19,6 @@
 }
 .showcase .showcase-content{
     background:rgb(18, 139, 160);
-    color: black;
     border-radius: 5px;
     align-self: center;
     padding: 40px;
@@ -28,3 +27,12 @@
     margin : auto;
     margin-top: 1.5cm;
 }
+.modal{
+    background: rgb(18, 139, 160);
+    border-radius: 5px;
+    width: 500;
+    height: 300;
+    margin:0 auto;
+    padding: 30;
+  }
+
